Enhanced file processing + refactors